[gd_scene load_steps=35 format=2]

[ext_resource path="res://addons/rmsmartshape/shapes/point.gd" type="Script" id=1]
[ext_resource path="res://addons/rmsmartshape/materials/shape_material.gd" type="Script" id=2]
[ext_resource path="res://addons/rmsmartshape/materials/edge_material_metadata.gd" type="Script" id=3]
[ext_resource path="res://addons/rmsmartshape/shapes/point_array.gd" type="Script" id=4]
[ext_resource path="res://addons/rmsmartshape/vertex_properties.gd" type="Script" id=5]
[ext_resource path="res://addons/rmsmartshape/normal_range.gd" type="Script" id=6]
[ext_resource path="res://addons/rmsmartshape/materials/edge_material.gd" type="Script" id=7]
[ext_resource path="res://addons/rmsmartshape/shapes/shape_closed.gd" type="Script" id=8]
[ext_resource path="res://Images/Terrain/DirtBG.png" type="Texture" id=9]
[ext_resource path="res://Images/Terrain/Grass.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Props/Car/Car.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Experiment 1.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Exp1 UI.tscn" type="PackedScene" id=13]

[sub_resource type="Resource" id=118]
script = ExtResource( 5 )
texture_idx = 6
flip = false
width = 1.0

[sub_resource type="Resource" id=119]
script = ExtResource( 1 )
position = Vector2( 6.92531, 83.2444 )
point_in = Vector2( -88.8092, 4.80051 )
point_out = Vector2( 0, 0 )
properties = SubResource( 118 )

[sub_resource type="Resource" id=120]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=121]
script = ExtResource( 1 )
position = Vector2( 1469.24, 737.075 )
point_in = Vector2( -60.0061, 2.40024 )
point_out = Vector2( 60.0061, -2.40024 )
properties = SubResource( 120 )

[sub_resource type="Resource" id=122]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=123]
script = ExtResource( 1 )
position = Vector2( 1343.32, 754.423 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 122 )

[sub_resource type="Resource" id=124]
script = ExtResource( 5 )
texture_idx = 6
flip = false
width = 1.0

[sub_resource type="Resource" id=125]
script = ExtResource( 1 )
position = Vector2( 6.92531, 83.2444 )
point_in = Vector2( -88.8092, 4.80051 )
point_out = Vector2( 0, 0 )
properties = SubResource( 124 )

[sub_resource type="Resource" id=126]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=127]
script = ExtResource( 1 )
position = Vector2( -51.2276, 752.022 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 126 )

[sub_resource type="Resource" id=128]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=129]
script = ExtResource( 1 )
position = Vector2( 644.644, 747.022 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 128 )

[sub_resource type="Resource" id=130]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=131]
script = ExtResource( 1 )
position = Vector2( 191.402, 83.7656 )
point_in = Vector2( -75.9819, 2.35971 )
point_out = Vector2( 75.9819, -2.35971 )
properties = SubResource( 130 )

[sub_resource type="Resource" id=132]
script = ExtResource( 4 )
_points = {
0: SubResource( 119 ),
1: SubResource( 121 ),
2: SubResource( 123 ),
3: SubResource( 125 ),
4: SubResource( 127 ),
6: SubResource( 129 ),
7: SubResource( 131 )
}
_point_order = [ 0, 7, 1, 2, 6, 4, 3 ]
_constraints = {
[ 0, 3 ]: 15
}
_next_key = 8

[sub_resource type="Resource" id=16]
script = ExtResource( 7 )
textures = [ ExtResource( 10 ) ]
texture_normals = [  ]
textures_corner_outer = [  ]
textures_corner_inner = [  ]
texture_normals_corner_outer = [  ]
texture_normals_corner_inner = [  ]
textures_taper_left = [  ]
textures_taper_right = [  ]
texture_normals_taper_left = [  ]
texture_normals_taper_right = [  ]
use_corner_texture = true
use_taper_texture = true
fit_mode = 0

[sub_resource type="Resource" id=17]
script = ExtResource( 6 )
begin = 0.0
distance = 0.0
edgeRendering = Vector2( 0, 0 )

[sub_resource type="Resource" id=18]
script = ExtResource( 3 )
edge_material = SubResource( 16 )
normal_range = SubResource( 17 )
weld = true
render = true
z_index = 0
z_as_relative = true
offset = 0.0

[sub_resource type="Resource" id=19]
script = ExtResource( 2 )
_edge_meta_materials = [ SubResource( 18 ) ]
fill_textures = [ ExtResource( 9 ) ]
fill_texture_normals = [  ]
fill_texture_z_index = -10
fill_mesh_offset = 0.0
render_offset = 0.0

[sub_resource type="RectangleShape2D" id=55]
extents = Vector2( 10, 201 )

[sub_resource type="CircleShape2D" id=117]

[node name="Experiment 1" type="Node2D"]
script = ExtResource( 12 )

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2( -128, 49 )

[node name="Texture" type="Node2D" parent="Ground"]
script = ExtResource( 8 )
_points = SubResource( 132 )
material_overrides = {
}
shape_material = SubResource( 19 )
tessellation_stages = 5
tessellation_tolerence = 4.0
flip_edges = false
render_edges = true
collision_size = 32.0
collision_offset = 0.0
collision_polygon_node_path = NodePath("../Collision")

[node name="Collision" type="CollisionPolygon2D" parent="Ground"]
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( 6.92026, 83.1844, 191.403, 83.7522, 195.742, 84.0977, 201.588, 85.4198, 217.62, 90.7268, 265.669, 111.246, 1400.22, 709.588, 1445.84, 730.097, 1460.52, 735.387, 1465.65, 736.666, 1487.98, 737.712, 1428.78, 744.85, 1343.32, 754.453, 644.644, 747.023, -54.4864, 755.346, -55.4679, 419.433, -39.6559, 189.762, -31.431, 146.743, -26.5378, 128.723, -21.0938, 113.35, -15.0505, 100.871, -6.98737, 90.658 )

[node name="Car" parent="." instance=ExtResource( 11 )]
position = Vector2( 29, 93 )
gravity_scale = 15.0

[node name="Camera2D" type="Camera2D" parent="Car"]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1406, 737 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -59, -147 )
shape = SubResource( 55 )

[node name="CheckPoints" type="Node2D" parent="."]
position = Vector2( 17, 29 )

[node name="CP1" type="Area2D" parent="CheckPoints"]
position = Vector2( 130, 87 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/CP1"]
shape = SubResource( 117 )

[node name="CP2" type="Area2D" parent="CheckPoints"]
position = Vector2( 244, 141 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/CP2"]
shape = SubResource( 117 )

[node name="CP3" type="Area2D" parent="CheckPoints"]
position = Vector2( 357, 199 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/CP3"]
shape = SubResource( 117 )

[node name="CP4" type="Area2D" parent="CheckPoints"]
position = Vector2( 467, 263 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/CP4"]
shape = SubResource( 117 )

[node name="CP5" type="Area2D" parent="CheckPoints"]
position = Vector2( 602, 328 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/CP5"]
shape = SubResource( 117 )

[node name="CP6" type="Area2D" parent="CheckPoints"]
position = Vector2( 722, 395 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/CP6"]
shape = SubResource( 117 )

[node name="CP7" type="Area2D" parent="CheckPoints"]
position = Vector2( 837, 456 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/CP7"]
shape = SubResource( 117 )

[node name="CP8" type="Area2D" parent="CheckPoints"]
position = Vector2( 954, 512 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/CP8"]
shape = SubResource( 117 )

[node name="CP9" type="Area2D" parent="CheckPoints"]
position = Vector2( 1075, 574 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/CP9"]
shape = SubResource( 117 )

[node name="CP10" type="Area2D" parent="CheckPoints"]
position = Vector2( 1192, 635 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoints/CP10"]
shape = SubResource( 117 )

[node name="Exp1_UI" parent="." instance=ExtResource( 13 )]
pause_mode = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="CheckPoints/CP1" to="." method="_on_CP1_body_entered"]
[connection signal="body_entered" from="CheckPoints/CP2" to="." method="_on_CP1_body_entered"]
[connection signal="body_entered" from="CheckPoints/CP3" to="." method="_on_CP1_body_entered"]
[connection signal="body_entered" from="CheckPoints/CP4" to="." method="_on_CP1_body_entered"]
[connection signal="body_entered" from="CheckPoints/CP5" to="." method="_on_CP1_body_entered"]
[connection signal="body_entered" from="CheckPoints/CP6" to="." method="_on_CP1_body_entered"]
[connection signal="body_entered" from="CheckPoints/CP7" to="." method="_on_CP1_body_entered"]
[connection signal="body_entered" from="CheckPoints/CP8" to="." method="_on_CP1_body_entered"]
[connection signal="body_entered" from="CheckPoints/CP9" to="." method="_on_CP1_body_entered"]
[connection signal="body_entered" from="CheckPoints/CP10" to="." method="_on_CP1_body_entered"]
